client list overflow fix

--- a/src/app/components/client-list.component/client-list.component.css
+++ b/src/app/components/client-list.component/client-list.component.css
@@ -4,6 +4,9 @@ mat-card {
   background-color: var(--main-color);
 
   max-width: fit-content;
+}
+
+mat-card-content {
   overflow-x: auto;
 }
 
