--- a/src/app/components/tour/tour-info-sidebar.component/tour-info-sidebar.component.css
+++ b/src/app/components/tour/tour-info-sidebar.component/tour-info-sidebar.component.css
@@ -16,6 +16,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
 }
 
 .info_block {
